package com.example.musicplayer;

/**
 * Интерфейс AudioPlayer предоставляет абстракцию для управления воспроизведением аудио.
 * Реализации этого интерфейса могут предоставлять функциональность воспроизведения,
 * паузы, остановки, получения текущей позиции и длительности трека, перемотки к
 * определенной позиции и установки уровня громкости для левого и правого каналов звука.
 */
public interface AudioPlayer {

    /**
     * Запускает воспроизведение аудио.
     */
    void play();

    /**
     * Приостанавливает воспроизведение аудио.
     */
    void pause();

    /**
     * Останавливает воспроизведение аудио и подготавливает MediaPlayer для
     * последующего использования.
     */
    void stop();

    /**
     * Проверяет, проигрывается ли в данный момент аудио.
     *
     * @return true, если аудио воспроизводится, в противном случае - false.
     */
    boolean isPlaying();

    /**
     * Получает текущую позицию воспроизведения в миллисекундах.
     *
     * @return Текущая позиция воспроизведения.
     */
    int getCurrentPosition();

    /**
     * Получает длительность аудио в миллисекундах.
     *
     * @return Длительность аудио.
     */
    int getDuration();

    /**
     * Устанавливает позицию воспроизведения на указанное время в миллисекундах.
     *
     * @param position Время, на которое нужно перемотать воспроизведение.
     */
    void seekTo(int position);

    /**
     * Устанавливает уровень громкости для левого и правого каналов звука.
     *
     * @param leftVolume  Уровень громкости для левого канала (от 0.0 до 1.0).
     * @param rightVolume Уровень громкости для правого канала (от 0.0 до 1.0).
     */
    void setVolume(float leftVolume, float rightVolume);
}

